--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-webpack-starter",
+  "name": "tobis-blog.com",
   "version": "1.0.0",
-  "description": "Simple Starter-Kit including webpack, react and many more cool things",
+  "description": "My personal blog",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
